<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rijeka_login"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/my_primary"
        android:alpha="0.7"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_above="@id/card_view"
            android:padding="28dp">

            <ImageView
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/parkspotter_logo"/>
        </LinearLayout>

<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    app:cardCornerRadius="48dp"
    android:layout_marginBottom="-20dp"
    android:id="@+id/card_view">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="28dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Dobrodošli"
            android:textColor="@color/my_primary"
            android:fontFamily="sans-serif-medium"
            android:textSize="28dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="14dp"
            android:text="Molim ulogirajte se u aplikaciju pomoću vaših podataka" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Username"
            android:alpha="0.7"
            android:textStyle="bold"/>

        <AutoCompleteTextView
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:hint="Username"
        android:inputType="text"
        android:completionThreshold="1"
        android:dropDownHeight="200dp"
        android:layout_marginTop="5dp"/>


        <View
            android:layout_width="wrap_content"
            android:layout_height="20dp"/>
        <TextView
            android:id="@+id/pasVis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Password"
            android:alpha="0.7"
            android:textStyle="bold"/>

        <AutoCompleteTextView
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:inputType="textPassword"
            android:hint="password"
            android:longClickable="false"
            android:contentDescription="Unesite lozinku"
            android:importantForAccessibility="no"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <CheckBox
                android:id="@+id/remember_me_chkb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Zapamti me"
                android:layout_centerVertical="true"
                android:alpha="0.7"/>

            <TextView
                android:id="@+id/forgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Zaboravio sam lozinku"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"/>
        </RelativeLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="10dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textSize="18dp"
            android:text="Prijavi se"
            app:cornerRadius="32dp"/>

        <View
            android:layout_width="wrap_content"
            android:layout_height="10dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/RegistrationButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textSize="18dp"
            android:text="Kreiraj račun"
            app:cornerRadius="32dp"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>

</RelativeLayout>