<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rijeka_login"
    tools:context=".RegistrationActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/my_primary"
        android:alpha="0.7"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_above="@id/card_view"
        android:padding="28dp">

        <ImageView
            android:layout_width="300dp"
            android:layout_height="250dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/parkspotter_logo"/>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:cardCornerRadius="28dp"
        android:layout_marginBottom="-22dp"
        android:id="@+id/card_view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="28dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Izrada računa"
                android:textColor="@color/my_primary"
                android:textSize="28dp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="Unesite tražene podatke kako biste stvorili račun."/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Email"
                android:alpha="0.7"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/emailNovi"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:inputType="textEmailAddress"
                android:contentDescription="Unos adrese e-pošte"
                android:importantForAccessibility="no"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Username"
                android:alpha="0.7"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/usernameNovi"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:inputType="textVisiblePassword|textNoSuggestions"
                android:contentDescription="Unosite username"
                android:importantForAccessibility="no"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Lozinka"
                android:alpha="0.7"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/passwordNovi"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:inputType="textPassword"
                android:contentDescription="Unos lozinke"
                android:importantForAccessibility="no"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ponovno unesite lozinku"
                android:alpha="0.7"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/repassword"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:inputType="textPassword"
                android:contentDescription="Unos lozinke"
                android:importantForAccessibility="no"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/RegistrationBtn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textSize="18dp"
                android:text="Kreiraj račun"
                app:cornerRadius="32dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/LoginBtn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textSize="18dp"
                android:text="Prijavi se"
                android:layout_marginTop="5dp"
                app:cornerRadius="32dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>