<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="HardcodedText"
    android:id="@+id/navi_menu">

    <item
        android:id="@+id/slobodna"
        android:icon="@drawable/car_free"
        android:title="Stanje parkirališta uživo" />

    <item
        android:id="@+id/ostala"
        android:icon="@drawable/baseline_local_parking_24"
        android:title="Ostala parkirališta" />
    
    <item
        android:id="@+id/odjava"
        android:icon="@drawable/logout_icon"
        android:title="Odjava" />

</menu>